use Guard class instead of pthread_mutex_t

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,4 @@ aux_source_directory(. ROOT_SRC)
 
 add_executable(demo ${ROOT_SRC})
 
-target_link_libraries(demo TRANSPORT_LAYER NETWORK_LAYER DATALINK_LAYER GLOBAL NETWORK_BASE ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(demo TRANSPORT_LAYER NETWORK_LAYER DATALINK_LAYER NETWORK_BASE GLOBAL ${CMAKE_THREAD_LIBS_INIT})
